scripts/nullaway/wpi/url8df97b3310_dbathon_nurikabe_java_tgz-pJ8-dbathon_nurikabe_MainBenchJ8.txt
../wpi/url8df97b3310_dbathon_nurikabe_java_tgz-pJ8-dbathon_nurikabe_MainBenchJ8/src/dbathon/nurikabe/board/BoardState.java:25: error: [NullAway] assigning @Nullable expression to @NonNull field
            this.fixedCell = fixedCell;
                           ^
    (see http://t.uber.com/nullaway )
../wpi/url8df97b3310_dbathon_nurikabe_java_tgz-pJ8-dbathon_nurikabe_MainBenchJ8/src/dbathon/nurikabe/board/CellSet.java:88: error: [NullAway] @NonNull field CellSet$1.last not initialized
            private Cell last;
                         ^
    (see http://t.uber.com/nullaway )
../wpi/url8df97b3310_dbathon_nurikabe_java_tgz-pJ8-dbathon_nurikabe_MainBenchJ8/src/dbathon/nurikabe/solver/strategy/AllValidIslandsStrategy.java:65: error: [NullAway] enhanced-for expression inAllIslands is @Nullable
                for (final Cell cell : inAllIslands) {
                                       ^
    (see http://t.uber.com/nullaway )
../wpi/url8df97b3310_dbathon_nurikabe_java_tgz-pJ8-dbathon_nurikabe_MainBenchJ8/src/dbathon/nurikabe/solver/strategy/AllValidIslandsStrategy.java:72: error: [NullAway] dereferenced expression reachableMap.get(cell) is @Nullable
                    reachableMap.get(cell).add(fixedCell);
                                          ^
    (see http://t.uber.com/nullaway )
4 errors
